--- a/static/index.html
+++ b/static/index.html
@@ -14,9 +14,9 @@
 
 <body>
 	<nav class="navbar navbar-light bg-light">
-		<div class="container"> <a class="navbar-brand" href="#">
-            📦 TonieTools
-            </a> </div>
+		<div class="container">
+			<a class="navbar-brand" href="#">📦 TonieTools</a>
+		</div>
 	</nav>
 	<br />
 	<div class="container" id="app">
